# pypsbuilder

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  ci-environment.yml  ci-requirements.txt  codecov.yml  environment.yml  psbuilder-script.py  psdrawpd-script.py  psginput-script.py  psgrid-script.py  psiso-script.py  psshow-script.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: develop.yml  master.yml  others.yml  python-package-conda.yml  release.yml  testing.yml  testrelease.yml
conda-build/pypsbuilder/: meta.yaml
conda-build/pypsbuilder-dev/: meta.yaml
docs/: Makefile  api.rst  authors.rst  command-line.rst  conf.py  index.rst  installation.rst  psbuilder-tutorial.rst  psbuilders-tutorial.rst  psexplorer-tutorial.rst  readthedocs-environment.yml  tutorial.rst  usage.rst
docs/api/: pypsbuilder.psclasses.Dogmin.rst  pypsbuilder.psclasses.InvPoint.rst  pypsbuilder.psclasses.PTsection.rst  pypsbuilder.psclasses.PXsection.rst  pypsbuilder.psclasses.TCResult.rst  pypsbuilder.psclasses.TCResultSet.rst  pypsbuilder.psclasses.TXsection.rst  pypsbuilder.psclasses.UniLine.rst  pypsbuilder.psexplorer.InvPoint.rst  pypsbuilder.psexplorer.PTPS.rst  pypsbuilder.psexplorer.PTsection.rst  pypsbuilder.psexplorer.PXPS.rst  pypsbuilder.psexplorer.PXsection.rst  pypsbuilder.psexplorer.TCAPI.rst  pypsbuilder.psexplorer.TXPS.rst  pypsbuilder.psexplorer.TXsection.rst  pypsbuilder.psexplorer.UniLine.rst  pypsbuilder.tcapi.TC34API.rst  pypsbuilder.tcapi.TC35API.rst
examples/avgpelite/: tc-avgpelite.txt  tc-mp50MnNCKFMASHTO.txt  tc-prefs.txt
examples/avgpelite_34/: tc-6axmn.txt  tc-avgpelite.txt  tc-ds62.txt  tc-prefs.txt
examples/outputs/: inv1-ic.txt  inv1-log.txt  inv2-ic.txt  inv2-log.txt  inv3-ic.txt  inv3-log.txt  uni1-ic.txt  uni1-log.txt  uni2-ic.txt  uni2-log.txt  uni3-ic.txt  uni3-log.txt
notebooks/: pypsbuilder.ipynb
notebooks/.ipynb_checkpoints/: pypsbuilder-checkpoint.ipynb
pypsbuilder/: __init__.py  psbuilder.py  psbuilders.py  psclasses.py  psexplorer.py  tcapi.py  tcinit.py  txbuilder.py  ui_addinv.py  ui_adduni.py  ui_psbuilder.py  ui_ptbuilder.py  ui_pxbuilder.py  ui_txbuilder.py  ui_uniguess.py  utils.py
pypsbuilder/tests/: test_pclasses.py  test_psbuilder.py
pypsbuilder/ui/: addinv.ui  adduni.ui  compile_ui.sh  psbuilder.ui  ptbuilder.ui  pxbuilder.ui  txbuilder.ui  uniguess.ui
