[tool.poetry]
name = "pypsbuilder"
version = "2.5.0"
description = "THERMOCALC front-end for constructing and analyzing PT pseudosections"
authors = ["Ondrej Lexa <lexa.ondrej@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20"
matplotlib = "^3.6"
pyqt5 = "^5.15"
scipy = "^1.10"
networkx = "^3.2"
shapely = "^2.0"
tqdm = "^4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
black = "^24"

[tool.poetry.scripts]
ptbuilder = "pypsbuilder.psbuilders:ptbuilder"
txbuilder = "pypsbuilder.psbuilders:txbuilder"
pxbuilder = "pypsbuilder.psbuilders:pxbuilder"
psshow = "pypsbuilder.psexplorer:ps_show"
psiso = "pypsbuilder.psexplorer:ps_iso"
psgrid = "pypsbuilder.psexplorer:ps_grid"
psdrawpd = "pypsbuilder.psexplorer:ps_drawpd"
tcinit = "pypsbuilder.tcinit:tcprojinit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
)/
'''

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
