[tool.poetry]
name = "pypsbuilder"
version = "2.5.2"
description = "THERMOCALC front-end for constructing and analyzing PT pseudosections"
authors = ["Ondrej Lexa <lexa.ondrej@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ondrolexa/pypsbuilder"
documentation = "https://pypsbuilder.readthedocs.io"
keywords = ["petrology", "THERMOCALC"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
include = ["AUTHORS.md", "CHANGELOG.md", "CONTRIBUTING.md"]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1"
matplotlib = "^3.9"
pyqt5 = "^5.15"
scipy = "^1.14"
networkx = "^3.3"
shapely = "^2"
tqdm = "^4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"

[tool.poetry.scripts]
ptbuilder = "pypsbuilder.psbuilders:ptbuilder"
txbuilder = "pypsbuilder.psbuilders:txbuilder"
pxbuilder = "pypsbuilder.psbuilders:pxbuilder"
psshow = "pypsbuilder.psexplorer:ps_show"
psiso = "pypsbuilder.psexplorer:ps_iso"
psgrid = "pypsbuilder.psexplorer:ps_grid"
psdrawpd = "pypsbuilder.psexplorer:ps_drawpd"
tcinit = "pypsbuilder.tcinit:tcprojinit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
)/
'''

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
