[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pypsbuilder"
dynamic = ["version"]
description = "THERMOCALC front-end for constructing and analyzing PT pseudosections"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["petrology", "THERMOCALC"]
authors = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
maintainers = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "matplotlib>=3.8",
    "qtpy",
    "scipy",
    "scikit-image",
    "networkx",
    "shapely>=2",
    "tqdm",
]

[project.optional-dependencies]
pyqt5 = ["pyqt5"]
pyqt6 = ["pyqt6"]
jupyter = ["jupyterlab"]
tests = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx_mdinclude", "sphinx_rtd_theme"]
dev = ["pypsbuilder[pyqt6,jupyter,tests,docs]", "black"]

[project.urls]
Homepage = "https://github.com/ondrolexa/pypsbuilder"
Documentation = "https://pypsbuilder.readthedocs.io"
Repository = "https://github.com/ondrolexa/pypsbuilder.git"
Issues = "https://github.com/ondrolexa/pypsbuilder/issues"
Changelog = "https://github.com/ondrolexa/pypsbuilder/blob/master/CHANGELOG.md"

[project.scripts]
ptbuilder = "pypsbuilder.psbuilders:ptbuilder"
txbuilder = "pypsbuilder.psbuilders:txbuilder"
pxbuilder = "pypsbuilder.psbuilders:pxbuilder"
psshow = "pypsbuilder.psexplorer:ps_show"
psiso = "pypsbuilder.psexplorer:ps_iso"
psgrid = "pypsbuilder.psexplorer:ps_grid"
psdrawpd = "pypsbuilder.psexplorer:ps_drawpd"
tcinit = "pypsbuilder.tcinit:tcprojinit"

[tool.hatch.version]
path = "pypsbuilder/__init__.py"

[tool.black]
line-length = 88
extend-exclude = '''.*ui_.*'''
